@@ -363,6 +363,14 @@ The notes are all shoved over to the left proportionally,
 leaving you an extra 3/19's of a measure of blank space.
 You can then adjust the grid lines to match your new
 spacing.
+<h3><b>Remove space before</b> and <b>Remove space after</b></h3>
+<p>These buttons remvoe a fraction of the measure from the
+beginning or end.  If you want to cut off the first quarter
+of a measure, set the numerator/denominator to 1/4, then
+press "Remove space before."  If you want to cut off the last
+1/3rd of a measure, set the numerator/denominator to 1/3
+and press "Remove space after."
+
 
 <h2>Using Gneutronica with softsynths such as fluidsynth</h2>
 Using alsa-virmidi, you can uee softsynths.
